perbaiki link cdn tailwind script

--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Banyuwangi Catering - Ulfi Karomah</title>
-        <meta
-            name="description"
-            content="Pesan Catering, Nasi Kotak, dan Tumpeng di Banyuwangi. Melayani acara syukuran, rapat, dan hampers. Halal, enak, dan cepat!"
-        />
-        <script src="http://cdn.tailwindcss.com"></script>
         <link rel="icon" href="image/Logo.png" type="image/png" />
 
         <link
@@ -128,40 +123,58 @@
                     </p>
                 </div>
             </section>
-            
+
             <section class="py-12 bg-white">
-    <div class="max-w-6xl mx-auto px-4">
-                          <div class="text-center mb-12" data-aos="fade-up">
+                <div class="max-w-6xl mx-auto px-4">
+                    <div class="text-center mb-12" data-aos="fade-up">
                         <h2 class="text-3xl font-bold mb-2">
-                            Mengapa Harus <span class="text-orange-600">Kami</span>
+                            Mengapa Harus
+                            <span class="text-orange-600">Kami</span>
                         </h2>
                         <div class="h-1 w-20 bg-orange-600 mx-auto"></div>
                     </div>
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-center">
-            <div data-aos="zoom-in">
-                <div class="text-orange-600 text-3xl mb-2"><i class="fas fa-check-circle"></i></div>
-                <p class="font-bold">Bahan Segar</p>
-                <p class="text-xs text-slate-500">Belanja tiap pagi</p>
-            </div>
-            <div data-aos="zoom-in" data-aos-delay="100">
-                <div class="text-orange-600 text-3xl mb-2"><i class="fas fa-utensils"></i></div>
-                <p class="font-bold">Rasa Otentik</p>
-                <p class="text-xs text-slate-500">Resep turun temurun</p>
-            </div>
-            <div data-aos="zoom-in" data-aos-delay="200">
-                <div class="text-orange-600 text-3xl mb-2"><i class="fas fa-certificate"></i></div>
-                <p class="font-bold">100% Halal</p>
-                <p class="text-xs text-slate-500">Jaminan kebersihan</p>
-            </div>
-            <div data-aos="zoom-in" data-aos-delay="300">
-                <div class="text-orange-600 text-3xl mb-2"><i class="fas fa-truck"></i></div>
-                <p class="font-bold">Tepat Waktu</p>
-                <p class="text-xs text-slate-500">Area Banyuwangi</p>
-            </div>
-        </div>
-    </div>
-</section>
-
+                    <div
+                        class="grid grid-cols-2 md:grid-cols-4 gap-4 text-center"
+                    >
+                        <div data-aos="zoom-in">
+                            <div class="text-orange-600 text-3xl mb-2">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                            <p class="font-bold">Bahan Segar</p>
+                            <p class="text-xs text-slate-500">
+                                Belanja tiap pagi
+                            </p>
+                        </div>
+                        <div data-aos="zoom-in" data-aos-delay="100">
+                            <div class="text-orange-600 text-3xl mb-2">
+                                <i class="fas fa-utensils"></i>
+                            </div>
+                            <p class="font-bold">Rasa Otentik</p>
+                            <p class="text-xs text-slate-500">
+                                Resep turun temurun
+                            </p>
+                        </div>
+                        <div data-aos="zoom-in" data-aos-delay="200">
+                            <div class="text-orange-600 text-3xl mb-2">
+                                <i class="fas fa-certificate"></i>
+                            </div>
+                            <p class="font-bold">100% Halal</p>
+                            <p class="text-xs text-slate-500">
+                                Jaminan kebersihan
+                            </p>
+                        </div>
+                        <div data-aos="zoom-in" data-aos-delay="300">
+                            <div class="text-orange-600 text-3xl mb-2">
+                                <i class="fas fa-truck"></i>
+                            </div>
+                            <p class="font-bold">Tepat Waktu</p>
+                            <p class="text-xs text-slate-500">
+                                Area Banyuwangi
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <section id="produk" class="py-20 px-4">
                 <div class="max-w-6xl mx-auto">
@@ -298,7 +311,10 @@
                 </div>
             </section>
 
-            <section id="cara-pesan" class="py-16 px-4 bg-orange-600 text-white">
+            <section
+                id="cara-pesan"
+                class="py-16 px-4 bg-orange-600 text-white"
+            >
                 <div class="max-w-4xl mx-auto">
                     <h2
                         class="text-3xl font-bold mb-12 text-center text-white"
@@ -451,6 +467,7 @@
         </footer>
 
         <script src="script.js"></script>
+        <script src="https://cdn.tailwindcss.com"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>
             AOS.init({
